the UI of the page created

--- a/index.html
+++ b/index.html
@@ -3,8 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-
+    <div id="heading">
+        <h2>THE GREAT</h2>
+        <h1>RGB(12, 34, 123)</h1>
+        <h2>GUESSING GAME</h2>
+    </div>
+    <div id="action-container">
+        <div id="actions">
+            <spna class="newColor"><h4>NEW COLORS</h4></spna>
+            <span class="level"><h4>EASY</h4></span>
+            <span class="level"><h4>HARD</h4></span>
+        </div>
+    </div>
+    <div id="container">
+        <div class="colorPalets"></div>
+        <div class="colorPalets"></div>
+        <div class="colorPalets"></div>
+        <div class="colorPalets"></div>
+        <div class="colorPalets"></div>
+        <div class="colorPalets"></div>
+    </div>
+<script src="main.js" type="text/javascript"></script>
 </body>
 </html>
