--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     </div>
     <div id="action-container">
         <div id="actions">
-            <spna class="newColor"><h4> NEW COLORS </h4></spna>
-            <span class="level"><h4> EASY </h4></span>
-            <span class="level"><h4> HARD </h4></span>
+            <spna class="newColor"><h4>&nbspNEW COLORS&nbsp</h4></spna>
+            <span class="level"><h4>&nbspEASY&nbsp</h4></span>
+            <span class="level"><h4>&nbspHARD&nbsp</h4></span>
         </div>
     </div>
     <div id="container">
