--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     </div>
     <div id="action-container">
         <div id="actions">
-            <spna class="newColor"><h4>&nbspNEW COLORS&nbsp</h4></spna>
-            <span class="level"><h4>&nbspEASY&nbsp</h4></span>
-            <span class="level"><h4>&nbspHARD&nbsp</h4></span>
+            <span class="newColor"><h4>&nbspNEW COLORS&nbsp</h4></span>
+            <div class="level">
+                <span id="easy"><h4>&nbspEASY&nbsp</h4></span><span id="hard"><h4>&nbspHARD&nbsp</h4></span>
+            </div>
         </div>
     </div>
     <div id="container">
