--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="heading">
         <h2>THE GREAT</h2>
-        <h1>RGB(12, 34, 123)</h1>
+        <h1 id="question">RGB(12, 34, 123)</h1>
         <h2>GUESSING GAME</h2>
     </div>
     <div id="action-container">
