Game Logic Implemented

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     </div>
     <div id="action-container">
         <div id="actions">
-            <span class="newColor"><h4>&nbspNEW COLORS&nbsp</h4></span>
-            <div class="level">
-                <span id="easy"><h4>&nbspEASY&nbsp</h4></span><span id="hard"><h4>&nbspHARD&nbsp</h4></span>
+            <div class="newColor gen_info"><span id="change_this">&nbsp<strong>NEW COLORS&nbsp</strong></span></div>
+            <div class="gen_info correct"><span>Correct!</span></div>
+            <div class="level gen_info">
+                <span id="easy">&nbsp<strong>EASY&nbsp</strong></span><span id="hard">&nbsp<strong>HARD</strong>&nbsp</span>
             </div>
         </div>
     </div>
